# BasicCheckers-JNI

./: README.md
Checkers_CPP/: CMakeLists.txt  Main.cpp
Checkers_JAVA/src/main/: Main.java  main_Main.h
Checkers_JAVA/src/test/: BasicTest.java
